# PrimeManifest

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  renderer_bench_balls.ppm  renderer_bench_rects.ppm
assets/fonts/: NotoSansMono.psfont
assets/images/: image_icon_256.rgba
cmake/: README.md
docs/: optimizations.md  todo.md  ui-render-plan.md
examples/: image_line_pixel_demo.cpp  renderer_bench.cpp  text_render_demo.cpp
include/PrimeManifest/renderer/: BatchBuilder.hpp  Optimizer2D.hpp  Renderer2D.hpp
include/PrimeManifest/text/: FontBitmap.hpp  FontRegistry.hpp  GlyphBitmapFormat.hpp  TextBake.hpp  TextLayout.hpp  Typography.hpp
include/PrimeManifest/util/: BitmapFont.hpp
scripts/: compile.sh
src/renderer/: BatchBuilder.cpp  CommandAnalysis.cpp  CommandAnalysis.hpp  Optimizer2D.cpp  Renderer2D.cpp
src/text/: FontBitmap.cpp  FontRegistry.cpp  TextBake.cpp
src/util/: BitmapFont.cpp
tests/unit/: test_batch.cpp  test_batch_builder.cpp  test_bitmap_font.cpp  test_circle.cpp  test_clear.cpp  test_color_helpers.cpp  test_command_structs.cpp  test_command_structs_strict_violations.cpp  test_debug_tiles.cpp  test_font_bitmap.cpp  test_font_registry.cpp  test_front_to_back.cpp  test_gradient_cache.cpp  test_harness.hpp  test_helpers.hpp  test_image.cpp  test_layout.cpp  test_line.cpp  test_main.cpp  test_misc.cpp  test_optimizer.cpp  test_optimizer_filters.cpp  test_optimizer_rect_cache.cpp  test_optimizer_text_cache.cpp  test_ordering.cpp  test_palette.cpp  test_palette_store.cpp  test_pixel.cpp  test_profiles.cpp  test_rect.cpp  test_rect_cache_edges.cpp  test_renderer.cpp  test_store_defaults.cpp  test_store_more.cpp  test_store_sizes.cpp  test_struct_clears.cpp  test_target_guard.cpp  test_text.cpp  test_text_bake.cpp  test_text_bake_edge.cpp  (+5 more)
